; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/vulkan/extr_vulkan_symbol_wrapper.c_vulkan_symbol_wrapper_load_global_symbols.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/vulkan/extr_vulkan_symbol_wrapper.c_vulkan_symbol_wrapper_load_global_symbols.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"vkCreateInstance\00", align 1
@vkCreateInstance = common dso_local global i32 0, align 4
@VK_FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [39 x i8] c"vkEnumerateInstanceExtensionProperties\00", align 1
@vkEnumerateInstanceExtensionProperties = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [35 x i8] c"vkEnumerateInstanceLayerProperties\00", align 1
@vkEnumerateInstanceLayerProperties = common dso_local global i32 0, align 4
@VK_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vulkan_symbol_wrapper_load_global_symbols() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @vkCreateInstance, align 4
  %3 = call i32 @VULKAN_SYMBOL_WRAPPER_LOAD_INSTANCE_SYMBOL(i32* null, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @VK_FALSE, align 4
  store i32 %6, i32* %1, align 4
  br label %21

7:                                                ; preds = %0
  %8 = load i32, i32* @vkEnumerateInstanceExtensionProperties, align 4
  %9 = call i32 @VULKAN_SYMBOL_WRAPPER_LOAD_INSTANCE_SYMBOL(i32* null, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %7
  %12 = load i32, i32* @VK_FALSE, align 4
  store i32 %12, i32* %1, align 4
  br label %21

13:                                               ; preds = %7
  %14 = load i32, i32* @vkEnumerateInstanceLayerProperties, align 4
  %15 = call i32 @VULKAN_SYMBOL_WRAPPER_LOAD_INSTANCE_SYMBOL(i32* null, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %13
  %18 = load i32, i32* @VK_FALSE, align 4
  store i32 %18, i32* %1, align 4
  br label %21

19:                                               ; preds = %13
  %20 = load i32, i32* @VK_TRUE, align 4
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %19, %17, %11, %5
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i32 @VULKAN_SYMBOL_WRAPPER_LOAD_INSTANCE_SYMBOL(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
